# cppGithubTests

./: CMakeLists.txt  Hello.cpp  Hello.h  README.md  main.cpp
Exercise/: Add.cpp  Add.h
tests/: AddTest.cpp  AddTest.h  SimpleHelloTest.cpp  SimpleHelloTest.h
