cmake_minimum_required(VERSION 3.23)
project(SimpleTest)
include(CTest)
add_subdirectory(tests)
add_executable(SimpleHelloTest tests/SimpleHelloTest.cpp tests/SimpleHelloTest.h Hello.cpp Hello.h)
add_executable(SimpleAddTest tests/AddTest.cpp tests/AddTest.h Add.cpp Add.h)
add_test(SimpleHello SimpleHelloTest)
add_test(SimpleAdd SimpleAddTest)
set(CMAKE_CXX_STANDARD 14)
add_executable(SimpleTest main.cpp Hello.cpp Hello.h Add.h Add.cpp)
