cmake_minimum_required(VERSION 3.23)
project(SimpleTest)
include(CTest)
add_subdirectory(tests)
add_executable(SimpleHelloTest tests/SimpleHelloTest.cpp tests/SimpleHelloTest.h Exercise/Hello.cpp Exercise/Hello.h)
add_executable(SimpleAddTest tests/AddTest.cpp tests/AddTest.h Exercise/Add.cpp Exercise/Add.h)
add_test(SimpleHello SimpleHelloTest)
add_test(SimpleAdd SimpleAddTest)
set(CMAKE_CXX_STANDARD 14)
add_executable(SimpleTest main.cpp Exercise/Hello.cpp Exercise/Hello.h Exercise/Add.h Exercise/Add.cpp)
